[package]
name = "ringkernel-wgpu-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WGSL code generation from Rust DSL for RingKernel"
keywords = ["gpu", "wgsl", "webgpu", "codegen", "transpiler"]
categories = ["development-tools", "compilers", "graphics"]

[dependencies]
syn = { workspace = true, features = ["full", "visit", "extra-traits", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# For WGSL validation in tests
naga = { version = "24.0", features = ["wgsl-in"] }
